--- a/Nauron/FunctionSelector.xaml
+++ b/Nauron/FunctionSelector.xaml
@@ -5,8 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Nauron"
         mc:Ignorable="d"
-        Title="FunctionSelector" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="FunctionSelector" Height="293" Width="80">
+    <StackPanel Orientation="Vertical">
+        <Button x:Name="btnStepBinary" Content="StepBinary" Click="StepBinary" Margin="0,5,0,0" Height="40"></Button>
+        <Button x:Name="btnStepBipolar" Content="StepBipolar" Click="StepBipolar" Margin="0,5,0,0" Height="40"></Button>
+        <Button x:Name="btnSigmoid" Content="Sigmoid" Click="Sigmoid" Margin="0,5,0,0" Height="40"></Button>
+        <Button x:Name="btnTanh" Content="Tanh" Click="Tanh" Margin="0,5,0,0" Height="40"></Button>
+        <Button x:Name="btnReLU" Content="ReLU" Click="ReLU" Margin="0,5,0,0" Height="40"></Button>
+        <Button x:Name="btnLeakyReLU" Content="Leaky ReLU" Click="LeakyReLU" Margin="0,5,0,0" Height="40"></Button>
+    </StackPanel>
 </Window>
