--- a/Nauron/MainWindow.xaml
+++ b/Nauron/MainWindow.xaml
@@ -15,6 +15,7 @@
 
         <StackPanel Orientation="Horizontal" Margin="10" Grid.Row="0" VerticalAlignment="Top">
             <TextBox x:Name="FileNameBox" Width="150" Text="data1.txt"/>
+            <Button Content="Funckja" Margin="10,0,10,0" Click="FunctionButton_Click"/>
             <TextBox x:Name="MaxErrorBox" Width="80" Text="0.1" Margin="0,0,10,0" ToolTip="Maksymalny błąd"/>
             <TextBox x:Name="MaxIterBox" Width="80" Text="100" Margin="0,0,10,0" ToolTip="Maksymalna liczba epok"/>
             <Button Content="Trenuj" Click="TrainButton_Click"/>
