--- a/Nauron/MainWindow.xaml
+++ b/Nauron/MainWindow.xaml
@@ -28,12 +28,12 @@
             <TextBox x:Name="MaxIterBox" Width="80" Text="100" Margin="30,0,40,0" ToolTip="Maksymalna liczba iteracji"/>
             <Button Content="Inicjalizuj dane" Click="InitButton_Click"/>
             <Button Content="Trenuj" Click="TrainButton_Click" Margin="30,0,10,0"/>
-            <Label Content="Część danych treningowych" Margin="10,0,2,0"></Label>
-            <TextBox x:Name="UlamekTestowych" Width="28" Text="0,7" ToolTip="Ułamek wyznaczający podział danych"/>
+            <Label Content="Tempo uczenia" Margin="10,0,2,0"></Label>
+            <TextBox x:Name="LearningRate" Width="28" Text="0,7" ToolTip="Ułamek wyznaczający tempo uczenia"/>
         </StackPanel>
 
         <Canvas Name="PlotCanvas" Background="GhostWhite" Margin="10" Grid.Row="2"/>
-        <Label x:Name="ErrorText" Content="" FontWeight="Bold" Margin="10" Grid.Row="2"/>
         <Canvas Name="ErrorPlotCanvas" Background="GhostWhite" Margin="10" Grid.Row="3"/>
+        <Label x:Name="ErrorText" Content="" FontWeight="Bold" Margin="10" Grid.Row="3"/>
     </Grid>
 </Window>
