--- a/Nauron/DataEditor.xaml
+++ b/Nauron/DataEditor.xaml
@@ -10,13 +10,23 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
-            <Label Content="Nazwa pliku:" />
-            <TextBox x:Name="FileNameBox" Width="150" Text="data1.txt" />
-            <Button Content="Zapisz dane" Margin="10,0,0,0" Click="ZapiszDane"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="0">
+            <Label x:Name="LabelNadPlikiem" Content="Nazwa pliku" />
         </StackPanel>
-        <Canvas Name="PlotCanvas" Background="GhostWhite" Grid.Row="2" Margin="10"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="1">
+            <TextBox x:Name="FileNameBox" Width="80" Text="data1.txt" />
+            <Button Content="Zapisz dane do pliku" Margin="10,0,0,0" Click="ZapiszDane"/>
+            <Button Content="Zapisz dane w neuronie" Margin="10,0,0,0" Click="ZapiszDaneNeuron"/>
+            <Label Content="Koordynaty ostatniego punktu: "/>
+            <TextBox x:Name="XCoord" Width="40" TextChanged="CoordChangedX" />
+            <TextBox x:Name="YCoord" Width="40" TextChanged="CoordChangedY"/>
+            <Label Content="Zbior"/>
+            <CheckBox x:Name="DCheckbox" Click="ZmienZbior" Margin="0,6,0,0" Background="Red"/>
+            <Button Margin="10,0,0,0"  Click="DodajPunkt" Content="Dodaj nowy"/>
+        </StackPanel>
+        <Canvas Name="DataPointsCanvas" MouseDown="MouseDownCanvas" Background="GhostWhite" Grid.Row="2" Margin="10"/>
     </Grid>
 </Window>
