--- a/Nauron/DataEditor.xaml
+++ b/Nauron/DataEditor.xaml
@@ -15,6 +15,7 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0">
             <Label x:Name="LabelNadPlikiem" Content="Nazwa pliku" />
+            <Button Content="Oblicz granice ponownie" Margin="10,0,0,0" Click="RecalculateMinMax"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="1">
             <TextBox x:Name="FileNameBox" Width="80" Text="data1.txt" />
@@ -27,6 +28,6 @@
             <Button x:Name="DButton" Click="ZmienZbior" Background="Red" Width="26"/>
             <Button Margin="10,0,0,0"  Click="DodajPunkt" Content="Dodaj nowy"/>
         </StackPanel>
-        <Canvas Name="DataPointsCanvas" MouseDown="MouseDownCanvas" Background="GhostWhite" Grid.Row="2" Margin="10"/>
+        <Canvas Name="DataPointsCanvas" MouseUp="MouseUpCanvas" MouseMove="MouseMoveCanvas" MouseDown="MouseDownCanvas" Background="GhostWhite" Grid.Row="2" Margin="10"/>
     </Grid>
 </Window>
