--- a/Nauron/DataEditor.xaml
+++ b/Nauron/DataEditor.xaml
@@ -20,13 +20,13 @@
         <StackPanel Orientation="Horizontal" Grid.Row="1">
             <TextBox x:Name="FileNameBox" Width="80" Text="data1.txt" />
             <Button Content="Zapisz dane do pliku" Margin="10,0,0,0" Click="ZapiszDane"/>
-            <Button Content="Zapisz dane w neuronie" Margin="10,0,0,0" Click="ZapiszDaneNeuron"/>
             <Label Content="Koordynaty ostatniego punktu: "/>
             <TextBox x:Name="XCoord" Width="40" TextChanged="CoordChangedX" />
             <TextBox x:Name="YCoord" Width="40" TextChanged="CoordChangedY"/>
             <Label Content="Zbior"/>
             <Button x:Name="DButton" Click="ZmienZbior" Background="Red" Width="26"/>
             <Button Margin="10,0,0,0"  Click="DodajPunkt" Content="Dodaj nowy"/>
+            <Button Margin="10,0,0,0"  Click="UsunPunkt" Content="Usuń wybrany"/>
         </StackPanel>
         <Canvas Name="DataPointsCanvas" MouseUp="MouseUpCanvas" MouseMove="MouseMoveCanvas" MouseDown="MouseDownCanvas" Background="GhostWhite" Grid.Row="2" Margin="10"/>
     </Grid>
