--- a/Nauron/MainWindow.xaml
+++ b/Nauron/MainWindow.xaml
@@ -27,7 +27,7 @@
             <Button Content="Funckja" Margin="10,0,10,0" Click="FunctionButton_Click"/>
             <TextBox x:Name="MaxErrorBox" Width="80" Text="0,1" Margin="0,0,10,0" ToolTip="Maksymalny błąd"/>
             <TextBox x:Name="MaxIterBox" Width="80" Text="100" Margin="30,0,40,0" ToolTip="Maksymalna liczba iteracji"/>
-            <Button Content="Inicjalizuj dane" Click="InitButton_Click"/>
+            <Button Content="Wgraj dane z pliku" Click="InitButton_Click"/>
             <Button Content="Trenuj" Click="TrainButton_Click" Margin="30,0,10,0"/>
             <Label Content="Tempo uczenia" Margin="10,0,2,0"></Label>
             <TextBox x:Name="LearningRate" Width="28" Text="0,7" ToolTip="Ułamek wyznaczający tempo uczenia"/>
