--- a/Nauron/MainWindow.xaml
+++ b/Nauron/MainWindow.xaml
@@ -14,20 +14,30 @@
             <RowDefinition Height="150"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0">
-            <Label Content="Plik z danymi" Margin="20,0,20,0"/>
-            <Button Content="Edytuj dane" Click="OpenDataEditor" />
-            <Label Content="Maksymalny błąd" Margin="20,0,0,0"/>
-            <Label Content="Maksymalna liczba iteracji" Margin="0,0,10,0"/>
-            <CheckBox x:Name="CheckboxSingle" Checked="ChangeTrainingModeSingle"  Content="Pojedyncza iteracja" Margin="0,0,10,0"></CheckBox>
-            <CheckBox x:Name="CheckboxIter" Checked="ChangeTrainingModeMaxIt" Content="Maksymalna liczba iteracji" Margin="0,0,10,0"></CheckBox>
-            <CheckBox x:Name="CheckboxErr" Checked="ChangeTrainingModeMaxErr" Content="Do błedu"></CheckBox>
+            <Menu >
+                <MenuItem Name="Menu1" Header="Opcje">
+                    <MenuItem Header="Otwórz" Click="OpenButton" ToolTip="Ctrl+S"></MenuItem>
+                    <MenuItem Header="Zapisz" Click="SaveButton" ToolTip="Ctrl+S"></MenuItem>
+                    <MenuItem Header="Zapisz jako" Click="SaveAsButton" ToolTip="Ctrl+Shift+S"></MenuItem>
+                    <MenuItem Header="Tryb trenowania">
+                        <CheckBox x:Name="CheckboxSingle" Checked="ChangeTrainingModeSingle"  Content="Pojedyncza iteracja" Margin="0,0,10,0"></CheckBox>
+                        <CheckBox x:Name="CheckboxIter" Checked="ChangeTrainingModeMaxIt" Content="Maksymalna liczba iteracji" Margin="0,0,10,0"></CheckBox>
+                        <CheckBox x:Name="CheckboxErr" Checked="ChangeTrainingModeMaxErr" Content="Do błedu uczenia"></CheckBox>
+                    </MenuItem>
+                    <MenuItem Header="Funkcja aktywacji" Click="FunctionButton_Click"></MenuItem>
+                    <MenuItem Header="Typ neuronu"></MenuItem>
+                    <MenuItem Header="Edytuj dane" Click="OpenDataEditor"></MenuItem>
+                </MenuItem>
+            </Menu>
+            <Label Content="Maksymalny błąd" Margin="120,0,0,0"/>
+            <Label Content="Maksymalna liczba iteracji" Margin="0,0,0,0"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10" Grid.Row="1" VerticalAlignment="Top">
             <TextBox x:Name="FileNameBox" Width="150" Text="data1.txt"/>
-            <Button Content="Funckja" Margin="10,0,10,0" Click="FunctionButton_Click"/>
             <TextBox x:Name="MaxErrorBox" Width="80" Text="0,1" Margin="0,0,10,0" ToolTip="Maksymalny błąd"/>
             <TextBox x:Name="MaxIterBox" Width="80" Text="100" Margin="30,0,40,0" ToolTip="Maksymalna liczba iteracji"/>
             <Button Content="Wgraj dane z pliku" Click="InitButton_Click"/>
+            <Button Content="Zresetuj wagi neuronu" Click="ResetNeuronButton_Click"/>
             <Button Content="Trenuj" Click="TrainButton_Click" Margin="30,0,10,0"/>
             <Label Content="Tempo uczenia" Margin="10,0,2,0"></Label>
             <TextBox x:Name="LearningRate" Width="28" Text="0,7" ToolTip="Ułamek wyznaczający tempo uczenia"/>
